@@ -4,6 +4,11 @@ Revision history for App-Pebble
 
 * --verbose command line option
 
+* bin/pebble.pl --table shortcut for using Renderer table
+
+* Always render table as Ascii table, even if interactive (otherwise
+  you can't pipe it to "less -S").
+
 
 0.008 -- 2011-02-01 00:14:31 UTC
 
